--- a/jcmain.html
+++ b/jcmain.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>제니의 드레스룸</title>
+    <meta charset="utf-8">
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
