--- a/jcmain.html
+++ b/jcmain.html
@@ -1,22 +1,23 @@
-<!DOCTYPE html>
+О╩©<!DOCTYPE html>
 <html>
   <head>
-    <title>а╕╢оюг ╣Е╥╧╫╨╥К</title>
+    <meta charset="utf-8">
+    <title>Л═°К▀┬Л²≤ К⌠°К═┬Л┼╓Кё╦</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1><a href="jcmain.html">а╕╢оюг ╣Е╥╧╫╨╥К</a></h1>
+    <h1><a href="jcmain.html">Л═°К▀┬Л²≤ К⌠°К═┬Л┼╓Кё╦</a></h1>
     <div id="grid">
       <ul>
-        <li><a href="drroom.html">╣Е╥╧╫╨╥К ╣И╬Н╟║╠Б</a></li>
-        <li><a href="drmi.html">╣Е╥╧╫╨╥К ╟е©О (ют╬Н╨╦╠Б)</a></li>
-        <li><a href="aad.html">╬фюлеш цъ╟║/╩Ха╕</a></li>
-        <li><a href="stati.html">╬фюлеш еК╟Х</a></li>
-        <li><a href="rec.html">╬фюлеш цъц╣</a></li>
+        <li><a href="drroom.html">К⌠°К═┬Л┼╓Кё╦ К⌠╓Л√╢Й╟─Й╦╟</a></li>
+        <li><a href="drmi.html">К⌠°К═┬Л┼╓Кё╦ Й╠╟Л ╦ (Л·┘Л√╢КЁ╢Й╦╟)</a></li>
+        <li><a href="aad.html">Л∙└Л²╢М┘° Л╤■Й╟─/Л┌╜Л═°</a></li>
+        <li><a href="stati.html">Л∙└Л²╢М┘° М├╣ЙЁ└</a></li>
+        <li><a href="rec.html">Л∙└Л²╢М┘° Л╤■Л╡°</a></li>
       </ul>
       <div id="article">
         <p> 
-          а╕╢оюг ╣Е╥╧╫╨╥К©║ ©ю╫е╟мю╩ х╞©╣гу╢о╢ы. 
+          Л═°К▀┬Л²≤ К⌠°К═┬Л┼╓Кё╦Л≈░ Л≤╓Л▀═Й╡┐Л²└ М≥≤Л≤│М∙╘К▀┬К▀╓. 
         </p>
       </div>
     </div>
