--- a/stati.html
+++ b/stati.html
@@ -1,23 +1,23 @@
-<!DOCTYPE html>
+ï»¿<!DOCTYPE html>
 <html>
   <head>
-    <title>Á¦´ÏÀÇ µå·¹½º·ë</title>
+    <title>ì œë‹ˆì˜ ë“œë ˆìŠ¤ë£¸</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1><a href="jcmain.html">Á¦´ÏÀÇ µå·¹½º·ë</a></h1>
+    <h1><a href="jcmain.html">ì œë‹ˆì˜ ë“œë ˆìŠ¤ë£¸</a></h1>
     <div id="grid">
     <ul>
-      <li><a href="drroom.html">µå·¹½º·ë µé¾î°¡±â</a></li>
-      <li><a href="drmi.html">µå·¹½º·ë °Å¿ï (ÀÔ¾îº¸±â)</a></li>
-      <li><a href="aad.html">¾ÆÀÌÅÛ Ãß°¡/»èÁ¦</a></li>
-      <li><a href="stati.html" style="color:black">¾ÆÀÌÅÛ Åë°è</a></li>
-      <li><a href="rec.html">¾ÆÀÌÅÛ ÃßÃµ</a></li>
+      <li><a href="drroom.html">ë“œë ˆìŠ¤ë£¸ ë“¤ì–´ê°€ê¸°</a></li>
+      <li><a href="drmi.html">ë“œë ˆìŠ¤ë£¸ ê±°ìš¸ (ìž…ì–´ë³´ê¸°)</a></li>
+      <li><a href="aad.html">ì•„ì´í…œ ì¶”ê°€/ì‚­ì œ</a></li>
+      <li><a href="stati.html" style="color:black">ì•„ì´í…œ í†µê³„</a></li>
+      <li><a href="rec.html">ì•„ì´í…œ ì¶”ì²œ</a></li>
     </ul>
       <div id="article">
-      <h2>¾ÆÀÌÅÛ Åë°è</h2>
-      <p>¾ÆÀÌÅÛ Åë°è¸¦ È®ÀÎ ÇÕ´Ï´Ù.<br><br>
-       Á¾·ù, µðÀÚÀÎ, »ö»ó, ºê·£µå, ±¸ÀÔÀÏ, °¡°Ý, º¸°üÀ§Ä¡, °èÀý
+      <h2>ì•„ì´í…œ í†µê³„</h2>
+      <p>ì•„ì´í…œ í†µê³„ë¥¼ í™•ì¸ í•©ë‹ˆë‹¤.<br><br>
+       ì¢…ë¥˜, ë””ìžì¸, ìƒ‰ìƒ, ë¸Œëžœë“œ, êµ¬ìž…ì¼, ê°€ê²©, ë³´ê´€ìœ„ì¹˜, ê³„ì ˆ
         </p>
       </div>
     </div>
