--- a/drmi.html
+++ b/drmi.html
@@ -1,22 +1,22 @@
-<!DOCTYPE html>
+ï»¿<!DOCTYPE html>
 <html>
   <head>
-    <title>Á¦´ÏÀÇ µå·¹½º·ë</title>
+    <title>ì œë‹ˆì˜ ë“œë ˆìŠ¤ë£¸</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1><a href="jcmain.html">Á¦´ÏÀÇ µå·¹½º·ë</a></h1>
+    <h1><a href="jcmain.html">ì œë‹ˆì˜ ë“œë ˆìŠ¤ë£¸</a></h1>
     <div id="grid">
     <ul>
-      <li><a href="drroom.html">µå·¹½º·ë µé¾î°¡±â</a></li>
-      <li><a href="drmi.html"style="color:black">µå·¹½º·ë °Å¿ï (ÀÔ¾îº¸±â)</a></li>
-      <li><a href="aad.html">¾ÆÀÌÅÛ Ãß°¡/»èÁ¦</a></li>
-      <li><a href="stati.html">¾ÆÀÌÅÛ Åë°è</a></li>
-      <li><a href="rec.html">¾ÆÀÌÅÛ ÃßÃµ</a></li>
+      <li><a href="drroom.html">ë“œë ˆìŠ¤ë£¸ ë“¤ì–´ê°€ê¸°</a></li>
+      <li><a href="drmi.html"style="color:black">ë“œë ˆìŠ¤ë£¸ ê±°ìš¸ (ìž…ì–´ë³´ê¸°)</a></li>
+      <li><a href="aad.html">ì•„ì´í…œ ì¶”ê°€/ì‚­ì œ</a></li>
+      <li><a href="stati.html">ì•„ì´í…œ í†µê³„</a></li>
+      <li><a href="rec.html">ì•„ì´í…œ ì¶”ì²œ</a></li>
     </ul>
       <div id="article">
-      <h2>µå·¹½º·ë °Å¿ï</h2>
-      <p>¿ÊÀ» ¼±ÅÃÇØ ¹Ì¸® ÀÔ¾îº¼ ¼ö ÀÖ½À´Ï´Ù.
+      <h2>ë“œë ˆìŠ¤ë£¸ ê±°ìš¸</h2>
+      <p>ì˜·ì„ ì„ íƒí•´ ë¯¸ë¦¬ ìž…ì–´ë³¼ ìˆ˜ ìžˆìŠµë‹ˆë‹¤.
         </p>
       </div>
     </div>
