--- a/rec.html
+++ b/rec.html
@@ -1,22 +1,22 @@
-<!DOCTYPE html>
+ï»¿<!DOCTYPE html>
 <html>
   <head>
-    <title>Á¦´ÏÀÇ µå·¹½º·ë</title>
+    <title>ì œë‹ˆì˜ ë“œë ˆìŠ¤ë£¸</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1><a href="jcmain.html">Á¦´ÏÀÇ µå·¹½º·ë</a></h1>
+    <h1><a href="jcmain.html">ì œë‹ˆì˜ ë“œë ˆìŠ¤ë£¸</a></h1>
     <div id="grid">
     <ul>
-      <li><a href="drroom.html">µå·¹½º·ë µé¾î°¡±â</a></li>
-      <li><a href="drmi.html">µå·¹½º·ë °Å¿ï (ÀÔ¾îº¸±â)</a></li>
-      <li><a href="aad.html">¾ÆÀÌÅÛ Ãß°¡/»èÁ¦</a></li>
-      <li><a href="stati.html">¾ÆÀÌÅÛ Åë°è</a></li>
-      <li><a href="rec.html"style="color:black">¾ÆÀÌÅÛ ÃßÃµ</a></li>
+      <li><a href="drroom.html">ë“œë ˆìŠ¤ë£¸ ë“¤ì–´ê°€ê¸°</a></li>
+      <li><a href="drmi.html">ë“œë ˆìŠ¤ë£¸ ê±°ìš¸ (ìž…ì–´ë³´ê¸°)</a></li>
+      <li><a href="aad.html">ì•„ì´í…œ ì¶”ê°€/ì‚­ì œ</a></li>
+      <li><a href="stati.html">ì•„ì´í…œ í†µê³„</a></li>
+      <li><a href="rec.html"style="color:black">ì•„ì´í…œ ì¶”ì²œ</a></li>
     </ul>
       <div id="article">
-      <h2>¾ÆÀÌÅÛ ÃßÃµ</h2>
-      <p>¸Ó½Å·¯´×À» ÅëÇØ ¿À´ÃÀÇ ¾ÆÀÌÅÛÀ» ÃßÃµÇÕ´Ï´Ù.
+      <h2>ì•„ì´í…œ ì¶”ì²œ</h2>
+      <p>ë¨¸ì‹ ëŸ¬ë‹ì„ í†µí•´ ì˜¤ëŠ˜ì˜ ì•„ì´í…œì„ ì¶”ì²œí•©ë‹ˆë‹¤.
         </p>
       </div>
     </div>
