--- a/jcmain.html
+++ b/jcmain.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h1><a href="jcmain.html">제니의 드레스룸</a></h1>
+    <h1><a href="jcmain.html" style="color:black">제니의 드레스룸</a></h1>
     <div id="grid">
       <ul>
         <li><a href="drroom.html">드레스룸 들어가기</a></li>
